change from jdk 17 to 8